Closed Bug 1317311 Opened 8 years ago Closed 8 years ago

Don't treat undefined fromIndex parameter as absent in TypedArray.prototype.lastIndexOf

Categories

(Core :: JavaScript: Standard Library, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox52 --- affected
firefox53 --- fixed

People

(Reporter: anba, Assigned: anba)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

`assertEq(new Int8Array([10, 10]).lastIndexOf(10, undefined), 0)` should pass.
Attached patch bug1317311.patchSplinter Review
The two separate calls to CallTypedArrayMethodIfWrapped are needed because of bug 1138661.
Attachment #8810533 - Flags: review?(evilpies)
Attachment #8810533 - Flags: review?(evilpies) → review+
Keywords: checkin-needed
Pushed by cbook@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/a4bc362f24cc Check for absent instead of undefined argument in TypedArray.prototype.lastIndexOf. r=evilpie
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: