Bug 1317311: Check for absent instead of undefined argument in TypedArray.prototype.lastIndexOf. r=evilpie